--- a/package.json
+++ b/package.json
@@ -11,12 +11,10 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^5.1.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@preline/theme-switch": "^2.4.1",
     "astro": "^4.12.2",
-    "astro-navbar": "^2.3.3",
-    "flowbite": "^2.4.1",
+    "preline": "^2.4.1",
     "tailwindcss": "^3.4.6"
-  },
-  "devDependencies": {
-    "daisyui": "^4.12.10"
   }
 }
